syntax="proto3";
package images.v1;
option go_package = "github.com/anyuan-chen/colormatch/pkg/images";

message Color {
    string hex_code = 1;
}
message Image {
    int32 width = 1;
    int32 height = 2;
    bytes image_data = 3;
}
message ColorRequest {
    Image image = 1;
}
message ColorResponse {
    Color color = 1;
}

service ImageService {
    rpc GetMainColor (ColorRequest) returns (ColorResponse) {}
}